tenant and login new UI

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -1,14 +1,20 @@
 {
-  "findWorkspace": "Find Workspace",
-  "enterWorkspaceName": "Enter workspace",
-  "submit": "Submit",
+  "findWorkspace": "Company Code",
+  "enterWorkspaceName": "Enter the code",
+  "submit": "Next",
+  "errorCode": "Enter the company code",
+  "codeHint": "Please enter the company code",
+  "startText": "Start",
 
   "home": "Home",
-  "login": "Login",
+  "login": "Sign in",
   "email": "Email",
   "enterEmail": "Enter your email",
   "password": "Password",
   "enterPassword": "Enter your password",
+  "forgetPwd":"Forgot your password?",
+  "noAccount":"Don't have an account?",
+  "contactCompany":"Contact your company",
 
   "error": "Error",
   "locationDisabled": "Location Services Disabled",
